Fix missing padding for Categories & Filters
Ideally we'd move `.selectStyle` into its own CSS file (since it's only used for
those two buttons now), but I'm not sure what the best way to do that would be

--- a/src/frontend/components/UI/SelectField/index.css
+++ b/src/frontend/components/UI/SelectField/index.css
@@ -52,6 +52,7 @@
 }
 
 .selectStyle {
+  text-indent: 22px;
   padding-inline-end: 4rem;
 }
 
